# Cracking-the-code-interview-environment-and-tests

./: .gitignore  README.md
Algo/: CMakeLists.txt  algo.cpp  algo.hpp  algoTest.cpp
Array/: CMakeLists.txt  array.cpp  array.hpp  arraySol.cpp  arrayTest.cpp
LinkedList/: CMakeLists.txt  linkList.hpp  linkList.tcc  linkListQuestions.cpp  linkListQuestionsSol.cpp  linkListTest.cpp
Stack/: CMakeLists.txt  minStack.tcc  queueStack.tcc  queueStackSol.tcc  setOfStack.tcc  setOfStackSol.tcc  stack.cpp  stack.hpp  stackSol.hpp  stackTest.cpp  tripleStack.tcc
